--- a/templates/services/proxy-frontend.yaml
+++ b/templates/services/proxy-frontend.yaml
@@ -24,7 +24,10 @@ spec:
     name: https
     targetPort: {{ .Values.proxyFrontend.containerPorts.https }}
   selector:
-    statefulset.kubernetes.io/pod-name: proxy-frontend-0
+    app: proxy-frontend
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: {{ .Values.proxyFrontend.service.type }}
   {{- if .Values.proxyFrontend.service.sessionAffinity }}
   sessionAffinity: {{ .Values.proxyFrontend.service.sessionAffinity }}
