--- a/templates/applications/login.yaml
+++ b/templates/applications/login.yaml
@@ -1,5 +1,6 @@
+{{- if .Values.login.enabled }}
 apiVersion: apps/v1
-kind: StatefulSet
+kind: {{ .Values.login.kind }}
 metadata:
   name: login
   namespace: {{ include "docspace.namespace" . | quote }}
@@ -9,18 +10,26 @@ metadata:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.login.replicaCount }}
   selector:
     matchLabels:
       app: login
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
+  {{- if eq .Values.login.kind "StatefulSet" }}
   serviceName: login
-  {{- if .Values.login.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.login.updateStrategy | nindent 4 }}
   {{- end }}
-  podManagementPolicy: OrderedReady
+  {{- if .Values.login.updateStrategy }}
+  {{- if eq .Values.login.kind "Deployment" }}
+  strategy: {{- include "docspace.update.strategyType" .Values.login.updateStrategy }}
+  {{- else }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.login.updateStrategy }}
+  {{- end }}
+  {{- end }}
+  {{- if eq .Values.login.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.login.podManagementPolicy }}
+  {{- end }}
   template:
     metadata:
       labels:
@@ -160,3 +169,4 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+{{- end }}
