--- a/templates/applications/router.yaml
+++ b/templates/applications/router.yaml
@@ -1,5 +1,6 @@
+{{- if .Values.router.enabled }}
 apiVersion: apps/v1
-kind: Deployment
+kind: {{ .Values.router.kind }}
 metadata:
   name: router
   namespace: {{ include "docspace.namespace" . | quote }}
@@ -16,8 +17,18 @@ spec:
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
+  {{- if eq .Values.router.kind "StatefulSet" }}
+  serviceName: {{ template "docspace.svc.router.name" . }}
+  {{- end }}
   {{- if .Values.router.updateStrategy }}
-  strategy: {{- toYaml .Values.router.updateStrategy | nindent 4 }}
+  {{- if eq .Values.router.kind "Deployment" }}
+  strategy: {{- include "docspace.update.strategyType" .Values.router.updateStrategy }}
+  {{- else }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.router.updateStrategy }}
+  {{- end }}
+  {{- end }}
+  {{- if eq .Values.router.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.router.podManagementPolicy }}
   {{- end }}
   template:
     metadata:
@@ -172,3 +183,4 @@ spec:
       - name: router-log
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.router.name" . }}
+{{- end }}
