--- a/templates/applications/socket.yaml
+++ b/templates/applications/socket.yaml
@@ -1,30 +1,39 @@
+{{- if .Values.socket.enabled }}
 apiVersion: apps/v1
-kind: StatefulSet
+kind: {{ .Values.socket.kind }}
 metadata:
-  name: studio
+  name: socket
   namespace: {{ include "docspace.namespace" . | quote }}
   labels:
-    app: studio
+    app: socket
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.socket.replicaCount }}
   selector:
     matchLabels:
-      app: studio
+      app: socket
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
-  serviceName: studio
-  {{- if .Values.studio.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.studio.updateStrategy | nindent 4 }}
+  {{- if eq .Values.socket.kind "StatefulSet" }}
+  serviceName: socket
   {{- end }}
-  podManagementPolicy: OrderedReady
+  {{- if .Values.socket.updateStrategy }}
+  {{- if eq .Values.socket.kind "Deployment" }}
+  strategy: {{- include "docspace.update.strategyType" .Values.socket.updateStrategy }}
+  {{- else }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.socket.updateStrategy }}
+  {{- end }}
+  {{- end }}
+  {{- if eq .Values.socket.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.socket.podManagementPolicy }}
+  {{- end }}
   template:
     metadata:
       labels:
-        app: studio
+        app: socket
         {{- if .Values.commonLabels }}
         {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
@@ -39,13 +48,13 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      {{- if or .Values.studio.podAffinity .Values.studio.nodeAffinity }}
+      {{- if or .Values.socket.podAffinity .Values.socket.nodeAffinity }}
       affinity:
-        {{- with .Values.studio.podAffinity }}
+        {{- with .Values.socket.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- with .Values.studio.nodeAffinity }}
+        {{- with .Values.socket.nodeAffinity }}
         nodeAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
@@ -72,28 +81,30 @@ spec:
       {{- toYaml . | nindent 6 }}
       {{- end }}
       containers:
-      - name: studio
-        image: {{ .Values.studio.image.repository }}:{{ default .Values.images.tag .Values.studio.image.tag }}
-        imagePullPolicy: {{ .Values.studio.image.pullPolicy }}
+      - name: socket
+        image: {{ .Values.socket.image.repository }}:{{ default .Values.images.tag .Values.socket.image.tag }}
+        imagePullPolicy: {{ .Values.socket.image.pullPolicy }}
         {{- if .Values.containerSecurityContext.enabled }}
         securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 10 }}
         {{- end }}
         ports:
-        - containerPort: {{ .Values.studio.containerPorts.app }}
+        - containerPort: {{ .Values.socket.containerPorts.app }}
           name: app
-        {{- if .Values.studio.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.studio.startupProbe "enabled" | toYaml | nindent 10 }}
+        - containerPort: {{ .Values.socket.containerPorts.socket }}
+          name: socket
+        {{- if .Values.socket.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.socket.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.studio.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.studio.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.socket.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.socket.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.studio.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.studio.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.socket.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.socket.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        resources: {{- toYaml .Values.studio.resources | nindent 10 }}
+        resources: {{- toYaml .Values.socket.resources | nindent 10 }}
         env:
         - name: MYSQL_USER
-          value: {{ default .Values.connections.mysqlUser .Values.studio.mysqlUser }}
+          value: {{ default .Values.connections.mysqlUser .Values.socket.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -160,3 +171,4 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+{{- end }}
