--- a/templates/applications/ssoauth.yaml
+++ b/templates/applications/ssoauth.yaml
@@ -1,30 +1,39 @@
+{{- if .Values.ssoauth.enabled }}
 apiVersion: apps/v1
-kind: StatefulSet
+kind: {{ .Values.ssoauth.kind }}
 metadata:
-  name: clear-events
+  name: ssoauth
   namespace: {{ include "docspace.namespace" . | quote }}
   labels:
-    app: clear-events
+    app: ssoauth
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.ssoauth.replicaCount }}
   selector:
     matchLabels:
-      app: clear-events
+      app: ssoauth
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
-  serviceName: clear-events
-  {{- if .Values.clearEvents.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.clearEvents.updateStrategy | nindent 4 }}
+  {{- if eq .Values.ssoauth.kind "StatefulSet" }}
+  serviceName: ssoauth
   {{- end }}
-  podManagementPolicy: OrderedReady
+  {{- if .Values.ssoauth.updateStrategy }}
+  {{- if eq .Values.ssoauth.kind "Deployment" }}
+  strategy: {{- include "docspace.update.strategyType" .Values.ssoauth.updateStrategy }}
+  {{- else }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.ssoauth.updateStrategy }}
+  {{- end }}
+  {{- end }}
+  {{- if eq .Values.ssoauth.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.ssoauth.podManagementPolicy }}
+  {{- end }}
   template:
     metadata:
       labels:
-        app: clear-events
+        app: ssoauth
         {{- if .Values.commonLabels }}
         {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
@@ -39,13 +48,13 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      {{- if or .Values.clearEvents.podAffinity .Values.clearEvents.nodeAffinity }}
+      {{- if or .Values.ssoauth.podAffinity .Values.ssoauth.nodeAffinity }}
       affinity:
-        {{- with .Values.clearEvents.podAffinity }}
+        {{- with .Values.ssoauth.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- with .Values.clearEvents.nodeAffinity }}
+        {{- with .Values.ssoauth.nodeAffinity }}
         nodeAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
@@ -72,28 +81,30 @@ spec:
       {{- toYaml . | nindent 6 }}
       {{- end }}
       containers:
-      - name: clear-events
-        image: {{ .Values.clearEvents.image.repository }}:{{ default .Values.images.tag .Values.clearEvents.image.tag }}
-        imagePullPolicy: {{ .Values.clearEvents.image.pullPolicy }}
+      - name: ssoauth
+        image: {{ .Values.ssoauth.image.repository }}:{{ default .Values.images.tag .Values.ssoauth.image.tag }}
+        imagePullPolicy: {{ .Values.ssoauth.image.pullPolicy }}
         {{- if .Values.containerSecurityContext.enabled }}
         securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 10 }}
         {{- end }}
         ports:
-        - containerPort: {{ .Values.clearEvents.containerPorts.app }}
+        - containerPort: {{ .Values.ssoauth.containerPorts.app }}
           name: app
-        {{- if .Values.clearEvents.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.clearEvents.startupProbe "enabled" | toYaml | nindent 10 }}
+        - containerPort: {{ .Values.ssoauth.containerPorts.sso }}
+          name: sso
+        {{- if .Values.ssoauth.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.ssoauth.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.clearEvents.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.clearEvents.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.ssoauth.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.ssoauth.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.clearEvents.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.clearEvents.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.ssoauth.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.ssoauth.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        resources: {{- toYaml .Values.clearEvents.resources | nindent 10 }}
+        resources: {{- toYaml .Values.ssoauth.resources | nindent 10 }}
         env:
         - name: MYSQL_USER
-          value: {{ default .Values.connections.mysqlUser .Values.clearEvents.mysqlUser }}
+          value: {{ default .Values.connections.mysqlUser .Values.ssoauth.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -160,3 +171,4 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+{{- end }}
